--- a/client/src/components/CodingCat/CodingCat.css
+++ b/client/src/components/CodingCat/CodingCat.css
@@ -44,3 +44,6 @@
     stroke: var(--cyan);
 }
 
+.stop-music-note-animation, .stop-music-note-animation *, .stop-music-note-animation * * {
+    animation-play-state: paused;
+}
